syntax = "proto3";

package voterproto;

message CreateVoteRequest {
    int64 user_id = 1;
    int64 option_id = 2;
    int64 poll_id = 3;
}

message CreateVoteResponse {
    int64 status = 1;
}

service VoteService {
    rpc Vote(CreateVoteRequest) returns (CreateVoteResponse);
}
